Assistant: connect to port 80

--- a/homeassistantApp/src/main/res/values/strings.xml
+++ b/homeassistantApp/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string-array name="hosts_array">
         <item>app.rickiekarp.net</item>
         <item>10.0.3.2</item>
+        <item>192.168.178.200</item>
     </string-array>
 </resources>
