--- a/homeassistantApp/src/main/res/values/strings.xml
+++ b/homeassistantApp/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_info">About</string>
     <string name="action_notes">Shopping list</string>
+    <string name="action_notes_history">Shopping history</string>
     <string name="action_bought">Bought</string>
 
     <string name="app_description">description_placeholder </string>
