Remove module-info configurations

--- a/FilelistCreator/src/main/resources/net/rickiekarp/flc/language_packs/language_en.properties
+++ b/FilelistCreator/src/main/resources/net/rickiekarp/flc/language_packs/language_en.properties
@@ -1,5 +1,5 @@
 # This is the default language_en.properties file
-filelistcreator = Filelist-Creator
+net.rickiekarp.flc = Filelist-Creator
 desc = Program to create file lists of a selected directory. \nAdditionally the file list can be saved to a Text or HTML file.
 copyright = \u00a9 2014-2019 Rickie Karp
 
