JavaFXApps: Fix title text

--- a/projects/JavaFXApps/SHA1Pass/src/main/resources/language_packs/language_de.properties
+++ b/projects/JavaFXApps/SHA1Pass/src/main/resources/language_packs/language_de.properties
@@ -1,5 +1,5 @@
 # This is the default language_de.properties file
-sha1pass = SHA1 Pass
+net.rickiekarp.sha1pass = SHA1 Pass
 copyright = \u00a9 2014-2015 Rickie Karp
 desc = A sentence based password generation program.\nEnter a sentence and a word, then click an encoding button to generate a strong, secure password based on your input.\nUse different sentences and words to generate different passwords.
 
