--- a/projects/JavaFXApps/SHA1Pass/src/main/resources/language_packs/language_en.properties
+++ b/projects/JavaFXApps/SHA1Pass/src/main/resources/language_packs/language_en.properties
@@ -1,5 +1,5 @@
 # This is the default language_en.properties file
-sha1pass = SHA1 Pass
+net.rickiekarp.sha1pass = SHA1 Pass
 copyright = \u00a9 2014-2019 Rickie Karp
 desc = A sentence based password generation program.
 
