--- a/projects/JavaFXApps/QAAccountManager/src/main/resources/language_packs/language_de.properties
+++ b/projects/JavaFXApps/QAAccountManager/src/main/resources/language_packs/language_de.properties
@@ -1,5 +1,5 @@
 # This is the default language_en.properties file
-qaaccountmanager = QA Account Manager
+net.rickiekarp.qaacc = QA Account Manager
 desc = Program to maintain QA accounts
 copyright = \u00a9 2014-2019 Rickie Karp
 copy_name_desc = Copies the name to the clipboard
