--- a/projects/JavaFXApps/BotManager/src/main/resources/language_packs/language_en.properties
+++ b/projects/JavaFXApps/BotManager/src/main/resources/language_packs/language_en.properties
@@ -1,5 +1,5 @@
 # This is the default language_en.properties file
-botmanager = Bot Manager
+net.rickiekarp.botter = Bot Manager
 
 botSetup = Bot Setup
 desc_setup_1_0 = Select NodeJS!
